fix: z-index on nav, modal and map

--- a/src/styles/abstracts/_functions.scss
+++ b/src/styles/abstracts/_functions.scss
@@ -48,5 +48,5 @@
   text-shadow: $text-shadow-secondary-900;
   margin-bottom: spacing(4);
   position: relative;
-  z-index: 2;
+  z-index: $z-mid;
 }
