--- a/src/styles/components/_footer.scss
+++ b/src/styles/components/_footer.scss
@@ -7,7 +7,7 @@
   flex-wrap: wrap;
   padding: spacing(2) spacing(5);
   position: relative;
-  z-index: 2;
+  z-index: $z-mid;
 }
 
 .brand--footer {
