--- a/src/styles/components/_modal.scss
+++ b/src/styles/components/_modal.scss
@@ -5,7 +5,7 @@
   height: 100%;
   position: fixed;
   inset: 0;
-  z-index: 22;
+  z-index: $z-utmost;
   background-color: rgba($color-secondary-900, 0.5);
   backdrop-filter: blur(4px);
   display: flex;
