--- a/src/styles/components/_title.scss
+++ b/src/styles/components/_title.scss
@@ -17,7 +17,7 @@
   position: absolute;
   right: -2.5rem;
   top: 0;
-  z-index: -1;
+  z-index: $z-bg;
 }
 
 .title__deco::after {
@@ -29,7 +29,7 @@
   position: absolute;
   right: -2rem;
   bottom: 0;
-  z-index: -1;
+  z-index: $z-bg;
 }
 
 .title--center {
