--- a/src/styles/pages/_home.scss
+++ b/src/styles/pages/_home.scss
@@ -43,7 +43,7 @@
   grid-area: 1 / 6 / 2 / -1;
   display: grid;
   position: relative;
-  z-index: 2;
+  z-index: $z-mid;
 }
 
 .kv__title {
@@ -82,7 +82,7 @@
   align-items: start;
   justify-content: space-between;
   position: relative;
-  z-index: 2;
+  z-index: $z-mid;
 }
 
 .about__deco {
@@ -90,13 +90,13 @@
   position: absolute;
   top: 0;
   left: 50%;
-  z-index: -1;
+  z-index: $z-bg;
 }
 
 .about__wrapper {
   height: 100%;
   position: relative;
-  z-index: 2;
+  z-index: $z-mid;
   border-radius: $border-radius-base;
   overflow: hidden;
   &:hover .about__pic {
@@ -138,7 +138,7 @@
   height: auto;
   position: absolute;
   bottom: 0;
-  z-index: -1;
+  z-index: $z-bg;
 }
 
 // Steps
